--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="text-center">
                     <h3 class="text-4xl font-extrabold text-gray-200">そのまま放置しておくと…</h3>
                     <div class="mt-8 max-w-4xl mx-auto p-8 rounded-2xl">
-                       <img src="an_image_highlighting_the_creation_of_AI_disparity-1761037841740.jpg" alt="AI格差を示す画像" class="rounded-xl shadow-2xl w-full max-w-5xl mx-auto">
+                       <img src="./an_image_highlighting_the_creation_of_AI_disparity-1761037841740.jpg" alt="AI格差を示す画像" class="rounded-xl shadow-2xl w-full max-w-5xl mx-auto">
                     </div>
                 </div>
             </div>
