--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     ビジネスや創作でAIを使いこなし、あなたの価値を最大化するオンラインスクールです。
                 </p>
                 <div class="mt-12">
-                    <img src="ai_school_rd_header.png" alt="昇龍ヘッダー画像" class="rounded-xl shadow-2xl w-full max-w-5xl mx-auto">
+                    <img src="./ai_school_rd_header.png" alt="昇龍ヘッダー画像" class="rounded-xl shadow-2xl w-full max-w-5xl mx-auto">
                 </div>
                 <div class="mt-10">
                     <a href="#cta" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-8 rounded-lg text-lg transition duration-300 transform hover:scale-105">
