--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </p>
                 </div>
                 <div class="mt-12">
-                    <img src="スクリーンショット 2025-10-21 18.38.32.jpg" alt="生成AI市場の需要額見通し（世界）のグラフ" class="rounded-xl shadow-2xl w-full max-w-5xl mx-auto">
+                    <img src="./ai_market_2030.png" alt="生成AI市場の需要額見通し（世界）のグラフ" class="rounded-xl shadow-2xl w-full max-w-5xl mx-auto">
                 </div>
             </div>
         </section>
