--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </h2>
                 <p class="text-lg md:text-xl text-gray-400 mt-6 max-w-3xl mx-auto">
                     ChatGPT、画像生成、動画編集、業務自動化――。<br>
-                    ビジネスや創作でAIを使いこなし、あなたの価値を最大化するオンラインスクールです。
+                    ビジネスでAIを使いこなし、あなたの価値を最大化するオンラインスクールです。
                 </p>
                 <div class="mt-12">
                     <img src="./ai_school_rd_header.png" alt="昇龍ヘッダー画像" class="rounded-xl shadow-2xl w-full max-w-5xl mx-auto">
@@ -172,11 +172,11 @@
                 <div class="mt-20 text-center">
                     <h3 class="text-3xl lg:text-4xl font-bold text-gray-200">AI活用が<br class="sm:hidden">「<span class="text-red-500">当たり前</span>」のスキルへ</h3>
                     <p class="text-lg text-gray-400 leading-relaxed">
-                        AI活用のスキルを持つか持たないかで、個人のキャリアや企業の存続が左右される時代がすぐそこまで来ています。
+                        AI活用のスキルを持つか持たないかで、<br>個人のキャリアや企業の存続が左右される時代がすぐそこまで来ています。
                         <br><br>
                         <span class="font-bold text-red-500 text-3xl">けっして、他人事にしないでください。</span>
                         <br><br>
-                        今こそ、AIリテラシーを高め、この革新的な技術を味方につける時です。AI活用のスキルを身につけることは、未来を切り開くための必須条件となっているのです。
+                        今こそ、AIリテラシーを高め、この革新的な技術を味方につける時です。<br>AI活用のスキルを身につけることは、未来を切り開くための必須条件となっているのです。
                     </p>
                 </div>
             </div>
@@ -322,7 +322,7 @@
                     <h3 class="text-3xl lg:text-4xl font-bold">
                         AIの学校〜昇龍〜が提供する<span class="gradient-text">未来のスキル</span>
                     </h3>
-                    <p class="text-gray-400 mt-4 text-lg max-w-2xl mx-auto">体系的なカリキュラムで、AIを自在に操るための知識と技術を基礎から実践まで習得します。</p>
+                    <p class="text-gray-400 mt-4 text-lg max-w-2xl mx-auto">体系的なカリキュラムで、AIを自在に操るための知識と技術を<br>基礎から実践まで習得します。</p>
                 </div>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Skill Card 1 -->
@@ -492,7 +492,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
                     <h3 class="text-3xl lg:text-4xl font-bold">受講生の<span class="gradient-text">喜びの声</span></h3>
-                    <p class="text-gray-400 mt-2">未経験から始めた多くの方が、人生を大きく変えています。</p>
+                    <p class="text-gray-400 mt-2">未経験で始めた多くの方が、人生を大きく変えています。</p>
                 </div>
                 <div class="grid lg:grid-cols-3 gap-8">
                     <!-- Testimonial 1 -->
