--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     </div>
                     <!-- Card 3 -->
                     <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700">
-                        <h4 class="text-2xl font-bold mb-6 text-center">将来性のあるスキルを学び、副業やフリーランスで収入を増やしたい方</h4>
+                        <h4 class="text-2xl font-bold mb-6 text-center">将来性のあるスキルを学び、<br>副業やフリーランスで収入を増やしたい方</h4>
                         <ul class="space-y-4 text-left text-lg text-gray-300">
                             <li class="flex items-start bg-gray-900/50 p-4 rounded-lg">
                                 <svg class="w-6 h-6 text-indigo-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
@@ -295,7 +295,7 @@
                     </div>
                     <!-- Card 6 -->
                     <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700">
-                        <h4 class="text-2xl font-bold mb-6 text-center">AIの可能性にワクワクし、とにかく新しいことに挑戦してみたい方</h4>
+                        <h4 class="text-2xl font-bold mb-6 text-center">AIの可能性にワクワクし、新しいことに挑戦してみたい方</h4>
                         <ul class="space-y-4 text-left text-lg text-gray-300">
                             <li class="flex items-start bg-gray-900/50 p-4 rounded-lg">
                                 <svg class="w-6 h-6 text-indigo-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
