--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="max-w-3xl mx-auto space-y-12">
                     <!-- Card 1 -->
                     <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700">
-                        <h4 class="text-2xl font-bold mb-6 text-center">AIで業務を効率化し、生産性を上げたいビジネスパーソン</h4>
+                        <h4 class="text-2xl font-bold mb-6 text-center">AIで業務を効率化し、<br>生産性を上げたいビジネスパーソン</h4>
                         <ul class="space-y-4 text-left text-lg text-gray-300">
                             <li class="flex items-start bg-gray-900/50 p-4 rounded-lg">
                                 <svg class="w-6 h-6 text-indigo-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
@@ -223,7 +223,7 @@
                     </div>
                     <!-- Card 2 -->
                     <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700">
-                        <h4 class="text-2xl font-bold mb-6 text-center">AIを事業に導入し、コスト削減や新収益化を狙う経営者・事業主</h4>
+                        <h4 class="text-2xl font-bold mb-6 text-center">AIを事業に導入し、<br>コスト削減や新収益化を狙う経営者・事業主</h4>
                         <ul class="space-y-4 text-left text-lg text-gray-300">
                             <li class="flex items-start bg-gray-900/50 p-4 rounded-lg">
                                 <svg class="w-6 h-6 text-indigo-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v.01"></path></svg>
@@ -259,7 +259,7 @@
                     </div>
                     <!-- Card 4 -->
                     <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700">
-                        <h4 class="text-2xl font-bold mb-6 text-center">AIで高品質なコンテンツを量産したいクリエイターやマーケター</h4>
+                        <h4 class="text-2xl font-bold mb-6 text-center">AIで高品質なコンテンツを量産したい<br>クリエイターやマーケター</h4>
                         <ul class="space-y-4 text-left text-lg text-gray-300">
                             <li class="flex items-start bg-gray-900/50 p-4 rounded-lg">
                                 <svg class="w-6 h-6 text-indigo-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
@@ -295,7 +295,7 @@
                     </div>
                     <!-- Card 6 -->
                     <div class="bg-gray-800 p-8 rounded-2xl border border-gray-700">
-                        <h4 class="text-2xl font-bold mb-6 text-center">AIの可能性にワクワクし、新しいことに挑戦してみたい方</h4>
+                        <h4 class="text-2xl font-bold mb-6 text-center">AIの可能性にワクワクし、<br>とにかく新しいことに挑戦してみたい方</h4>
                         <ul class="space-y-4 text-left text-lg text-gray-300">
                             <li class="flex items-start bg-gray-900/50 p-4 rounded-lg">
                                 <svg class="w-6 h-6 text-indigo-400 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
