--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#faq" class="hover:text-indigo-400 transition">よくある質問</a>
             </nav>
             <a href="#cta2" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg transition duration-300">
-                無料相談はこちら
+                無料相談
             </a>
         </div>
     </header>
@@ -432,7 +432,7 @@
                     </p>
                     <div class="mt-10">
                         <a href="https://lin.ee/Uu6tvwX" class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg hover:bg-green-600 transition duration-300 transform hover:scale-105">
-                            LINEで無料相談を予約する
+                            LINEで無料相談する
                         </a>
                         <p class="text-indigo-200 mt-3 text-sm">簡単なアンケートに答えるだけで、あなたに合った活用法をご提案します。</p>
                     </div>
@@ -606,7 +606,7 @@
                     </p>
                     <div class="mt-10">
                         <a href="https://lin.ee/Uu6tvwX" class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg hover:bg-green-600 transition duration-300 transform hover:scale-105">
-                            LINEで無料相談を予約する
+                            LINEで無料相談する
                         </a>
                         <p class="text-indigo-200 mt-3 text-sm">簡単なアンケートに答えるだけで、あなたに合った活用法をご提案します。</p>
                     </div>
