--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                         <a href="https://lin.ee/Uu6tvwX" class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg hover:bg-green-600 transition duration-300 transform hover:scale-105">
                             LINEで無料相談する
                         </a>
-                        <p class="text-indigo-200 mt-3 text-sm">簡単なアンケートに答えるだけで、あなたに合った活用法をご提案します。</p>
+                        <p class="text-lg text-indigo-200 mt-4 max-w-2xl mx-auto">公式LINEに登録後、キーワード「AI」を送信してください。<br>日程調整のご案内を差し上げます。<br>只今、『AI活用の教科書10大特典』を無料プレゼント中！</p>
                     </div>
                 </div>
             </div>
@@ -492,7 +492,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-16">
                     <h3 class="text-3xl lg:text-4xl font-bold">受講生の<span class="gradient-text">喜びの声</span></h3>
-                    <p class="text-gray-400 mt-2">未経験で始めた多くの方が、人生を大きく変えています。</p>
+                    <p class="text-lg text-indigo-200 mt-4 max-w-2xl mx-auto">AI未経験から始めた多くの方が、人生を大きく変えています。</p>
                 </div>
                 <div class="grid lg:grid-cols-3 gap-8">
                     <!-- Testimonial 1 -->
@@ -608,7 +608,7 @@
                         <a href="https://lin.ee/Uu6tvwX" class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg hover:bg-green-600 transition duration-300 transform hover:scale-105">
                             LINEで無料相談する
                         </a>
-                        <p class="text-indigo-200 mt-3 text-sm">簡単なアンケートに答えるだけで、あなたに合った活用法をご提案します。</p>
+                        <p class="text-lg text-indigo-200 mt-4 max-w-2xl mx-auto">公式LINEに登録後、キーワード「AI」を送信してください。<br>日程調整のご案内を差し上げます。<br>只今、『AI活用の教科書10大特典』を無料プレゼント中！</p>
                     </div>
                 </div>
             </div>
